fix form wrapper height - was too short on small screens

--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -110,7 +110,7 @@ input.cc-cvc-input {
 .form-fieldset-toggle {
   height: 25em;
   @media screen and (max-width: $screen-sml) {
-    height: 30em;
+    height: 28em;
   }
 }
 
