--- a/css/main.css
+++ b/css/main.css
@@ -720,7 +720,7 @@ input.cc-cvc-input {
   height: 25em; }
   @media screen and (max-width: 568px) {
     .form-fieldset-toggle {
-      height: 30em; } }
+      height: 28em; } }
 
 #form-sign-up,
 #form-sign-in {
